# roots

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  basic_usage.sh
examples/claude-code-hooks/: pre-compact.sh  session-start.sh  settings.json
rust/: Cargo.toml
rust/src/: config.rs  embeddings.rs  index.rs  main.rs  memory.rs  types.rs
rust/src/cli/: config.rs  context.rs  memory.rs  mod.rs  server.rs
scripts/: install.sh  roots-embedder.service  update.sh
src/roots/: __init__.py  cli.py  config.py  embeddings.py  index.py  knowledge_base.py  server.py
tests/: test_knowledge_base.py
