[project]
name = "roots-kb"
version = "0.2.0"
description = "Embedding server for AI agent memory - used by Rust CLI for semantic search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "richmojo" }]
keywords = ["ai", "agents", "embeddings", "semantic-search", "sentence-transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies for embedding server
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Install with: uv tool install "git+https://github.com/richmojo/roots.git[embeddings]"
embeddings = [
    "sentence-transformers>=2.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

# No CLI scripts - Rust CLI handles all commands

[project.urls]
Homepage = "https://github.com/richmojo/roots"
Repository = "https://github.com/richmojo/roots"
Issues = "https://github.com/richmojo/roots/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roots"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
