[package]
name = "roots"
version = "0.1.0"
edition = "2021"
description = "Persistent knowledge base for AI agents"
license = "MIT"

[[bin]]
name = "roots"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
walkdir = "2"
regex = "1"
thiserror = "1"
dirs = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
